--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.55.0",
     "react-router-dom": "^6.22.0",
     "typescript": "^4.9.5"
   },
