--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "AI Website Builder",
-  "name": "AI Website Builder - Build Beautiful Websites with AI",
+  "name": "Want to Build a Website With AI—Fast and Easy? Here's How.",
   "icons": [
     {
       "src": "favicon.ico",
