--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
-    "react-router-dom": "^6.22.0",
-    "typescript": "^4.9.5"
+    "react-router-dom": "^6.22.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start:open": "vite & node scripts/open-browser.js"
@@ -44,6 +43,7 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "typescript": "^5.8.2",
     "vite": "^5.4.15"
   }
 }
