--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ VITE_FIREBASE_PROJECT_ID=better-systems-ai
 VITE_FIREBASE_STORAGE_BUCKET=better-systems-ai.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=87944804705
 VITE_FIREBASE_APP_ID=1:87944804705:web:f01dbf783bec65333cad20
-VITE_FIREBASE_MEASUREMENT_ID=G-FXJVZJY9KS 
+VITE_FIREBASE_MEASUREMENT_ID=G-FXJVZJY9KS
+FIREBASE_SERVICE_ACCOUNT_KEY={"type":"service_account","project_id":"better-systems-ai","private_key_id":"your-private-key-id","private_key":"your-private-key","client_email":"your-client-email","client_id":"your-client-id","auth_uri":"https://accounts.google.com/o/oauth2/auth","token_uri":"https://oauth2.googleapis.com/token","auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs","client_x509_cert_url":"your-cert-url"} 
