--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tiptap/extension-image": "^2.11.7",
+    "@tiptap/extension-link": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "dotenv": "^16.4.7",
     "firebase": "^10.14.1",
+    "firebase-admin": "^13.2.0",
     "framer-motion": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
